fixed MC strategy and added heuristics strategy